# blazegizmo

./: CMakeLists.txt  README.md
include/: blazegizmo.hh
source/: blazegizmo.cc
